--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,3 +37,45 @@
   available = {https://mochajs.org/},
   accessed = {2023-01-16}
 }
+
+@online{Microservices,
+  author = {Richardson, C},
+  title = {Microservices},
+  year = {2017},
+  available = {https://microservices.io/},
+  accessed = {2023-01-13}
+}
+
+@online{PuppvsSel,
+  author = {BrowserStack. (n.d.)},
+  title = {Puppeteer vs Selenium: Core Differences},
+  year = {2023},
+  available = {https://www.browserstack.com/guide/puppeteer-vs-selenium},
+  accessed = {2023-01-05}
+}
+
+@online{Crowther,
+  author = {Crowther, S},
+  title = {What is Puppeteer? Why Developers and Fraudsters Love it},
+  year = {2021},
+  available = {https://www.kasada.io/what-is-puppeteer-developers-fraudsters-love-it},
+  accessed = {2022-12-10}
+}
+
+@online{Crowther,
+  author = {Crowther, S},
+  title = {What is Puppeteer? Why Developers and Fraudsters Love it},
+  year = {2021},
+  available = {https://www.kasada.io/what-is-puppeteer-developers-fraudsters-love-it},
+  accessed = {2022-12-10}
+}
+
+@inbook{inbook,
+author = {Choudhary, Brijesh and Pophale, Chinmay and Gutte, Aditya and Dani, Ankit and Sonawani, Shilpa},
+year = {2020},
+month = {01},
+pages = {237-244},
+title = {Case Study: Use of AWS Lambda for Building a Serverless Chat Application},
+isbn = {978-981-15-0789-2},
+doi = {10.1007/978-981-15-0790-8_24}
+}
